# demo

./: .clang-format  .clangd  .gitignore
boost_demo/: xmake.lua
boost_demo/boost_pfr/: boost_pfr.cpp  xmake.lua
douban/: douban.go  go.mod
drogon-demo/: CMakeLists.txt  auto-build.sh  config.json  vcpkg.json
drogon-demo/src/: main.cpp
drogon-demo/src/controllers/: HelloController.cpp  HelloController.hpp  UserController.cpp  UserController.hpp
drogon-demo/src/models/: Users.cpp  Users.hpp  model.json
drogon-demo/test/: CMakeLists.txt  test_main.cpp
gin/: .air.toml  go.mod  go.sum
gin/cmd/api/: main.go
gin/config/: config.toml
gin/internal/config/: config.go
gin/internal/model/: product.go  user.go
gin/internal/repository/: database.go  user.go  user_mysql.go  user_postgres.go  user_postgres_test.go
gin/internal/server/: routes.go
gin/internal/server/dto/: user_dto.go
gin/internal/server/handler/: hello.go  user.go  user_test.go
gin/internal/server/middleware/: middleware.go
gin/internal/service/: user.go  user_test.go
gin/pkg/logger/: logger.go
qml/chapter-01-pinwheel/: chapter-01-pinwheel.qml  chapter-01-pinwheel.qmlproject
qml/chapter-02-1SyntaxDemo/: chapter-02-1SyntaxDemo.qml  chapter-02-1SyntaxDemo.qmlproject
qml/chapter-02-2PropertyDemo/: chapter-02-2PropertyDemo.qml  chapter-02-2PropertyDemo.qmlproject
